--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -391,7 +391,7 @@
         <!--Search Results View Controller-->
         <scene sceneID="0m5-1m-TMy">
             <objects>
-                <viewController id="Y9k-CM-XAA" userLabel="Search Results View Controller" sceneMemberID="viewController">
+                <viewController id="Y9k-CM-XAA" userLabel="Search Results View Controller" customClass="SearchResultsViewController" customModule="FlavorFinder" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="x14-3j-LRG"/>
                         <viewControllerLayoutGuide type="bottom" id="5fU-N5-qc0"/>
@@ -411,6 +411,10 @@
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="600"/>
+                    <connections>
+                        <outlet property="searchMatchesContainer" destination="6IW-3e-7Ct" id="CZc-6h-EuY"/>
+                        <outlet property="searchTermsContainer" destination="65o-dk-qLX" id="WW6-FE-oAO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YN3-3Y-uml" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
